--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -1,4 +1,25 @@
 global:
   params:
-    p1: 456
-    p2: 234
+    p1: 555
+    p2: 777
+
+spring:
+  h2:
+    console:
+      enabled: true
+  cloud:
+    discovery:
+      enabled: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
