--- a/config-repo/customer-service.yml
+++ b/config-repo/customer-service.yml
@@ -1,5 +1,13 @@
-customer.params.x=11
-customer.params.y=22
-spring.datasource.url=jdbc:h2:mem:customers-db
-spring.h2.console.enabled=true
-spring.data.rest.base-path=/api
+customer:
+  params:
+    x: 11
+    y: 22
+spring:
+  datasource:
+    url: jdbc:h2:mem:customers-db
+  h2:
+    console:
+      enabled: true
+  data:
+    rest:
+      base-path: /api
