--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
     import: optional:configserver:http://localhost:9999
 server:
   port: 8081
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
