--- a/billing-service/src/main/resources/application.yml
+++ b/billing-service/src/main/resources/application.yml
@@ -5,3 +5,8 @@ spring:
     import: optional:configserver:http://localhost:9999
 server:
   port: 8083
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
